--- a/src/components/MobileMenu.css
+++ b/src/components/MobileMenu.css
@@ -14,7 +14,7 @@
 	justify-content: center;
 	position: fixed;
 	top: 0;
-	left: -4rem;
+	left: -10rem;
 	opacity: 0;
 	width: 0;
 	height: 100vh;
